--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.1
   google_fonts: ^2.0.0
+  focus_widget: ^1.0.4+1
 
 dev_dependencies:
   flutter_test:
